# polars_readstat

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  compare_all_types.py  compare_datetime_bytes.py  explore_informative_nulls.py  hello.py  mkdocs.yml  pyproject.toml
.cargo/: config.toml.example
.claude/: settings.local.json
.github/workflows/: build-wheels.yml  docs.yml  linux_build.yml  publish_pypi.yml  temp_test_old_linux.yml  test-wheel-macos-arm64.yml  test-wheel-manylinux2014.yml  test_publish_pypi.yml
crates/cpp-sas7bdat/: Cargo.toml  build.rs  main.py  pyproject.toml
crates/cpp-sas7bdat/src/: lib.rs  main.rs  read.rs  to_polars.rs  utilities.rs
crates/polars_readstat/: Cargo.toml
crates/polars_readstat/src/: common.rs  error.rs  ffi.rs  formats.rs  formats_old.rs  lib.rs  main.rs  read.rs  types.rs
crates/polars_readstat_bindings/: Cargo.toml
crates/polars_readstat_bindings/src/: lib.rs  main.rs  pybindings.rs
crates/polars_readstat_rs/: ARROW_EXPORT.md  Cargo.toml  README.md  SCHEMA_INFERENCE.md
crates/polars_readstat_rs/benches/: readstat_stream_benchmarks.rs
crates/polars_readstat_rs/benches/sas/: read_benchmarks.rs  schema_benchmarks.rs
crates/polars_readstat_rs/benches/spss/: read_benchmarks.rs  schema_benchmarks.rs
crates/polars_readstat_rs/benches/stata/: read_benchmarks.rs  schema_benchmarks.rs
crates/polars_readstat_rs/examples/: benchmark.rs  sas_scan.rs  spss_scan.rs  stata_scan.rs  xpt_smoke.rs  zsav_memory_compare.rs
crates/polars_readstat_rs/src/: lib.rs  main.rs  metadata.rs  metadata_df.rs  pybindings.rs  read.rs  read_cppsas.rs  read_cppsas_py.rs  readstat_py.rs  readstat_stream.rs  stream.rs
crates/polars_readstat_rs/src/backends/: cpp.rs  mod.rs  readstat.rs  traits.rs
crates/polars_readstat_rs/src/sas/: arrow_output.rs  catalog.rs  data.rs  encoding.rs  metadata.rs  mod.rs  page.rs  polars_output.rs  reader.rs  row_reader.rs  types.rs  value.rs  writer.rs  xpt.rs  xpt_writer.rs
crates/polars_readstat_rs/src/sas/decompressor/: mod.rs  rle.rs
crates/polars_readstat_rs/src/spss/: arrow_output.rs  data.rs  metadata.rs  mod.rs  polars_output.rs  por.rs  reader.rs  types.rs  writer.rs
crates/polars_readstat_rs/src/stata/: arrow_output.rs  data.rs  metadata.rs  mod.rs  polars_output.rs  reader.rs  types.rs  value.rs  writer.rs
crates/polars_readstat_rs/tests/: arrow_stream_rowcount.rs  informative_nulls.rs  parallel_reader_integrity.rs  python_compare.rs  readstat_all_files.rs  row_index_unordered.rs  sas_row_reader.rs  sas_writer_csv.rs  streaming.rs
crates/polars_readstat_rs/tests/sas/: integration_tests.rs  regression_tests.rs
crates/polars_readstat_rs/tests/sas/data/: info_nulls.sas7bdat
crates/polars_readstat_rs/tests/spss/: smoke_tests.rs  spss_long_string_value_labels.rs  spss_value_labels.rs
crates/polars_readstat_rs/tests/stata/: stata_value_labels.rs  stata_writer_header.rs  stata_writer_roundtrip.rs  test_parquet_strl_roundtrip.rs
crates/readstat/: Cargo.toml
crates/readstat-sys/: Cargo.toml  build.rs  wrapper.h
crates/readstat-sys/csrc/: readstat_io_shared_mmap.c  readstat_io_shared_mmap.h
crates/readstat-sys/src/: lib.rs
crates/readstat/src/: cb.rs  cb_series.rs  common.rs  formats.rs  lib.rs  main.rs  rs_column.rs  rs_data.rs  rs_data_series.rs  rs_metadata.rs  rs_parser.rs  rs_path.rs  rs_var.rs  rs_write.rs  series_builder.rs  stream.rs
crates/streaming/: Cargo.toml
crates/streaming/src/: lib.rs  main.rs  read.rs  strategy.rs  stream.rs
crates/streaming/src/backends/: cpp.rs  readstat.rs  traits.rs
docs/: index.md  read.md  write.md
polars_readstat/: __init__.py
polars_readstat/polars_readstat/: __init__.py
scripts/: benchmark_metadata_write.py  benchmark_write_big.py  collect_matrix_0111.py  collect_matrix_current.py  compare_against_0111.sh  compare_fixture_parquet.py  compare_non_huge_matrix.sh  export_fixture_parquet.py  export_fixture_parquet_0111.py  memory_probe.py  run_polars_version_matrix.sh  summarize_matrix.py  test_after_maturin.sh  test_polars_versions.py
site/: 404.html  index.html
site/read/: index.html
site/search/: search_index.json
site/write/: index.html
test/: benchmark.py  benchmark_wide.py  create_sample_files.py  create_zsav.py  informative_nulls.py  pyreadstat_roundtrip_metadata.py  scratch.py  test.py  test2.py  test_schema_overrides.py
tests/: conftest.py  generate_long_string_value_labels.py  test_compress_read_write.py  test_informative_nulls.py  test_metadata_vs_0111.py  test_pandas_pyreadstat_interop.py  test_preserve_order_opts.py  test_rs_python_fixtures.py  test_sas7bcat_catalog.py  test_sink_readstat_write.py  test_spss_long_string_value_labels.py  test_write_bad_extensions.py  test_write_labels_roundtrip.py  test_write_roundtrip.py  test_write_sas_csv_import.py  test_write_stata_float_widths.py  test_xpt.py
