[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars-readstat"
version = "0.7.1"
description = "Read SAS (sas7bdat), Stata (dta), and SPSS (sav) files with polars"
readme = "README.md"
authors = [{name = "Jon Rothbaum", email = "jlrothbaum@gmail.com"}]
requires-python = ">=3.9"
license = {text = "MIT"}

classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars>=1.25.2",
]




[tool.maturin]
manifest-path = "crates/polars_readstat_rs/Cargo.toml"
module-name = "polars_readstat.polars_readstat_rs"
python-source = "polars_readstat"
python-packages = ["polars_readstat"]
features = ["python"]
include = [{ path = "polars_readstat/**/*", format = "wheel" }]

[tool.uv.workspace]
members = [
    "crates/cpp-sas7bdat",
]

[dependency-groups]
test = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pyreadstat>=1.2.8",
]
build = [
    "maturin>=1.8.3",
    "patchelf>=0.17.2.2; sys_platform == 'linux'", 
    "conan==2.17.1"   
]

[project.urls]
Homepage = "https://github.com/jrothbaum/polars_readstat"
Repository = "https://github.com/jrothbaum/polars_readstat"
Bug-Tracker = "https://github.com/jrothbaum/polars_readstat/issues"
