[package]
name = "cpp-sas7bdat"
version = "0.1.0"
edition = "2021"

[dependencies]
# Your runtime dependencies
libc = "0.2.173"
polars = { version = "0.48.1", default-features = false, features=["dtype-date","dtype-datetime","dtype-time","fmt","lazy"] }
polars-core = "0.48.1"
polars-arrow = "0.48.1"

rayon = "1.8"

[build-dependencies]
# Build-time dependencies for build.rs
cc = "1.2.27"
bindgen = "0.72.0"
num_cpus = "1.0"

[dev-dependencies]
# For testing
tempfile = "3.0"
