[package]
name = "polars_readstat_bindings"
version = "0.12.0"
authors = ["Jonathan Rothbaum <jon.rothbaum@gmail.com"]
edition = "2021"
description = "Streaming crate for polars-readstat"
license = "MIT"
repository = "https://github.com/jrothbaum/polars_readstat"

[lib]
name = "polars_readstat_bindings"
crate-type = ["cdylib", "rlib"]  # Add rlib for regular Rust usage

[features]
default = []
python = ["pyo3", "pyo3-polars"]

[dependencies]
# PyO3 dependencies - only included when python feature is enabled
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py39"], optional = true }
pyo3-polars = { version = "0.24.0", features = ["derive", "lazy"], optional = true }

path_abs = "0.5"
polars = { version = "0.51.0", features = ["dtype-array"] }
polars-readstat-rs = "0.1.1"
log = "0.4"
num_cpus = "1.0"
