[package]
name = "polars_readstat_rs"
version = "0.1.0"
authors = ["Jon Rothbaum <jlrothbaum@gmail.com>"]
edition = "2021"
description = "Rust program to read files from readstat->arrow and from arrow->write with readstat"
license = "MIT"
default-run = "polars_readstat_rs"
#   repository = "https://github.com/curtisalexander/readstat-rs"
[lib]
name = "polars_readstat_rs"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.20.0", features = ["derive", "lazy"] }

path_abs = "0.5"
polars = { version = "0.46.0", default-features = false, features=["dtype-i8","dtype-i16"] }
polars-core = "0.46.0"
readstat = { path = "../readstat" }
rayon = "1.8"
log = "0.4"
env_logger = "0.11.8"