[package]
name = "polars_readstat_rs"
version = "0.10.0"
authors = ["Jonathan Rothbaum <jon.rothbaum@gmail.com"]
edition = "2021"
description = "Streaming crate for polars-readstat"
license = "MIT"
repository = "https://github.com/jrothbaum/polars_readstat"

[lib]
name = "polars_readstat_rs"
crate-type = ["cdylib", "rlib"]  # Add rlib for regular Rust usage

[features]
default = []
python = ["pyo3", "pyo3-polars"]

[dependencies]
# PyO3 dependencies - only included when python feature is enabled
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py39"], optional = true }
pyo3-polars = { version = "0.21.0", features = ["derive", "lazy"], optional = true }

# Regular dependencies - always included
path_abs = "0.5"
polars = { version = "0.48.1", default-features = false, features=["dtype-i8","dtype-i16","dtype-date","fmt"] }
polars-core = "0.48.1"
readstat = { path = "../readstat" }
cpp-sas7bdat = { path = "../cpp-sas7bdat" }
rayon = "1.8"
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4"
num_cpus = "1.0"

[target.'cfg(windows)'.dependencies]
iconv-sys = { path = "../iconv-sys", version = "0.2.0" }