[package]
name = "readstat"
version = "0.13.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"
description = "Rust wrapper of the ReadStat C library, modified to use polars arrow by Jon Rothbaum"
license = "MIT"
repository = "https://github.com/jrothbaum/polars_readstat"

[dependencies]
polars = { version = "0.46.0", default-features = true }
polars-arrow = { version = "0.46.0", default-features = true }
clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }
crossbeam = "0.8"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
env_logger = "0.11"
indicatif = "0.17"
lazy_static = "1.4"
lexical = "7.0"
log = "0.4"
num_cpus = "1.16"
num-derive = "0.4"
num-format = "0.4"
num-traits = "0.2"
path_abs = "0.5"
rayon = "1.8"
regex = "1.10"
readstat-sys = { path = "../readstat-sys", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
